replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/08_unclosed_paren.su
// Expected error: AKA0100 - missing `)` to close argument list.

function vector Bad() {
    return Bundle(embed("cat"), embed("dog");
}
